--- a/informe/Makefile
+++ b/informe/Makefile
@@ -1,9 +1,12 @@
 MAIN = main.tex
 TEX = $(MAIN) reentrega.tex
+BIB = references.bib
 PDF = Informe_RTP1.pdf
-CLEAN = *.aux *.log $(PDF)
+CLEAN = *.aux *.log $(PDF) *.bbl *.blg
 
-$(PDF): $(TEX)
+$(PDF): $(TEX) $(BIB)
+	pdflatex $(MAIN)
+	bibtex main
 	pdflatex $(MAIN)
 	pdflatex $(MAIN)
 	mv main.pdf $(PDF)
